--- a/SmtpWindowsService/App.config
+++ b/SmtpWindowsService/App.config
@@ -3,4 +3,21 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <appSettings>
+    <!--Files and Directories-->
+    <add key="IPs" value="D:\VSProjects\SmtpWindowsService\SmtpWindowsService/Documents/IP.txt"/>
+    <add key="LineCount" value="D:\VSProjects\SmtpWindowsService\SmtpWindowsService/Documents/LineCount.txt"/>
+    <add key="Servers" value="D:\VSProjects\SmtpWindowsService\SmtpWindowsService/Documents/servers.txt"/>
+    <add key="vulnLocal" value="D:\VSProjects\SmtpWindowsService\SmtpWindowsService/Documents/vuln.txt"/>
+    <add key="remoteSmtpDirectory" value="/tmp/.ssh/Smtp"/>
+    <add key="localDestinatonForTempVuln" value="D:\VSProjects\SmtpWindowsService\SmtpWindowsService/Documents/TempFile.txt"/>
+
+    <!--Smtp Email Settings-->
+    <add key="EmailFrom" value="kaker007@gmail.com"/>
+    <add key="EmailTo" value="matolinka@yahoo.com"/>
+    <add key="SmtpServer" value="smtp.gmail.com"/>
+    <add key="SmtpUsername" value="kaker007@gmail.com"/>
+    <add key="SmtpPassword" value="aspirine#123"/>
+    <add key="SmtpPort" value="465"/>
+  </appSettings>
 </configuration>
