Console App update

--- a/TestSSHConsole/App.config
+++ b/TestSSHConsole/App.config
@@ -7,7 +7,9 @@
     <!--Files and Directories-->
     <add key="TempCpuInfo" value="D:\VSProjects\SmtpWindowsService\TestSSHConsole\Documents/TempCpuInfo.txt"/>
     <add key="Servers" value="D:\VSProjects\SmtpWindowsService\TestSSHConsole\Documents/servers.txt"/>
-    <add key="PHPServers" value="D:\VSProjects\SmtpWindowsService\TestSSHConsole\Documents/PHPServers.txt"/>
-    <add key="cpuinfo" value="D:\VSProjects\SmtpWindowsService\TestSSHConsole\Documents/cpuinfo.txt"/>
+    <add key="PHPServers" value="D:\VSProjects\SmtpWindowsService\TestSSHConsole\Documents/32bit.txt"/>
+    <add key="cpuinfo" value="D:\VSProjects\SmtpWindowsService\TestSSHConsole\Documents/64bit.txt"/>
+    <add key="TempUnameInfo" value="D:\VSProjects\SmtpWindowsService\TestSSHConsole\Documents/TempUnameInfo.txt"/>
+    
   </appSettings>
 </configuration>
