stats for test smtps

--- a/SmtpWindowsService/App.config
+++ b/SmtpWindowsService/App.config
@@ -12,6 +12,7 @@
     <add key="Miners" value="D:\VSProjects\SmtpWindowsService\SmtpWindowsService/Documents/miners.txt"/>
     <add key="vulnLocal" value="D:\VSProjects\SmtpWindowsService\SmtpWindowsService/Documents/vuln.txt"/>
     <add key="localDestinatonForTempVuln" value="D:\VSProjects\SmtpWindowsService\SmtpWindowsService/Documents/TempFile.txt"/>
+    <add key="DocumentsFolder" value="D:\VSProjects\SmtpWindowsService\SmtpWindowsService/Documents/"/>
 
     <!--Smtp Email Settings-->
     <add key="EmailFrom" value="kaker007@gmail.com"/>
